--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "develop": "nuxt",
+    "dev": "nuxt",
     "start": "nuxt start",
     "serve": "nuxt serve",
     "generate": "nuxt generate"
@@ -12,9 +12,15 @@
     "@nuxtjs/strapi": "^0.1.3",
     "core-js": "^2.6.5",
     "nuxt": "^2.14.6",
+    "vue-image-lightbox": "^7.2.0",
+    "vue-lazyload": "^1.3.3",
     "vue-meta": "^2.4.0"
   },
   "devDependencies": {
-    "@nuxtjs/tailwindcss": "^2.0.0"
+    "@aceforth/nuxt-optimized-images": "^1.4.0",
+    "@nuxtjs/tailwindcss": "^2.0.0",
+    "imagemin-mozjpeg": "^9.0.0",
+    "imagemin-pngquant": "^9.0.1",
+    "imagemin-svgo": "^8.0.0"
   }
 }
