--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,8 +10,12 @@
   },
   "dependencies": {
     "@nuxtjs/strapi": "^0.1.3",
+    "@nuxtjs/style-resources": "^1.0.0",
+    "bootstrap-vue": "^2.21.2",
     "core-js": "^2.6.5",
     "nuxt": "^2.14.6",
+    "nuxt-ssr-screen-size": "github:hugojerez/nuxt-ssr-screen-size",
+    "reset-css": "^5.0.1",
     "vue-image-lightbox": "^7.2.0",
     "vue-lazyload": "^1.3.3",
     "vue-meta": "^2.4.0"
@@ -19,8 +23,11 @@
   "devDependencies": {
     "@aceforth/nuxt-optimized-images": "^1.4.0",
     "@nuxtjs/tailwindcss": "^2.0.0",
+    "@nuxtjs/vuetify": "^1.11.2",
     "imagemin-mozjpeg": "^9.0.0",
     "imagemin-pngquant": "^9.0.1",
-    "imagemin-svgo": "^8.0.0"
+    "imagemin-svgo": "^8.0.0",
+    "node-sass": "^5.0.0",
+    "sass-loader": "^10.1.0"
   }
 }
