--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,13 +12,17 @@
     "@nuxtjs/strapi": "^0.1.3",
     "@nuxtjs/style-resources": "^1.0.0",
     "bootstrap-vue": "^2.21.2",
+    "cookie": "^0.4.1",
     "core-js": "^2.6.5",
+    "js-cookie": "^2.2.1",
     "nuxt": "^2.14.6",
     "nuxt-ssr-screen-size": "github:hugojerez/nuxt-ssr-screen-size",
     "reset-css": "^5.0.1",
     "vue-image-lightbox": "^7.2.0",
     "vue-lazyload": "^1.3.3",
-    "vue-meta": "^2.4.0"
+    "vue-meta": "^2.4.0",
+    "vue-numeric-input": "^1.0.6",
+    "vuex-persistedstate": "^4.0.0-beta.2"
   },
   "devDependencies": {
     "@aceforth/nuxt-optimized-images": "^1.4.0",
