--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,8 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
+    "@nuxtjs/axios": "^5.12.5",
+    "@nuxtjs/proxy": "^2.1.0",
     "@nuxtjs/strapi": "^0.1.3",
     "@nuxtjs/style-resources": "^1.0.0",
     "bootstrap-vue": "^2.21.2",
