--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,6 +28,7 @@
   },
   "devDependencies": {
     "@aceforth/nuxt-optimized-images": "^1.4.0",
+    "@nuxtjs/moment": "^1.6.1",
     "@nuxtjs/tailwindcss": "^2.0.0",
     "@nuxtjs/vuetify": "^1.11.2",
     "imagemin-mozjpeg": "^9.0.0",
