--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
     "strapi-plugin-email": "3.4.4",
     "strapi-plugin-upload": "3.4.4",
     "strapi-plugin-users-permissions": "3.4.4",
+    "strapi-provider-email-mailjet": "^3.3.0",
     "strapi-provider-email-sendgrid": "^3.4.4",
     "strapi-utils": "3.4.4"
   },
